--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -9,9 +9,7 @@
                     <h3>Customer</h3>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="firstName">First Name</label>
-                        </div>
+                        <div class="col-md-2"> <label>First Name</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
@@ -20,9 +18,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="lastName">Last Name</label>
-                        </div>
+                        <div class="col-md-2"> <label>Last Name</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
@@ -31,15 +27,14 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="lastName">Email</label>
-                        </div>
+                        <div class="col-md-2"> <label>Email</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
                             </div>
                         </div>
                     </div>
+
                 </div>
 
                 <!-- shipping Address -->
@@ -50,8 +45,10 @@
                         <div class="col-md-2"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change)="getStates('shippingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country">
+                                        {{ country.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -80,7 +77,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let state of shippingAddressStates" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -104,7 +103,9 @@
                         <span class="au-checkmark"></span>Billing Address same as Shipping Address
                     </label>
                 </div>
-                <!--billingAddress  -->
+
+
+                <!-- Billing Address -->
                 <div formGroupName="billingAddress" class="form-area">
                     <h3>Billing Address</h3>
 
@@ -112,8 +113,10 @@
                         <div class="col-md-2"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>TO DO</option>
+                                <select formControlName="country" (change)="getStates('billingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country">
+                                        {{ country.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -142,7 +145,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="state">
-                                    <option>TO DO</option>
+                                    <option *ngFor="let state of billingAddressStates" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -167,9 +172,9 @@
                         <div class="col-md-2"> <label>Card Type</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
+                                <select formControlName="cardType">
                                     <option>Visa</option>
-                                    <option>MasterCard</option>
+                                    <option>Mastercard</option>
                                 </select>
                             </div>
                         </div>
@@ -207,7 +212,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
-                                    <option *ngFor="let month of creditCardMonths">{{month}}</option>
+                                    <option *ngFor="let month of creditCardMonths">
+                                        {{ month }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -218,7 +225,9 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
-                                    <option *ngFor="let year of creditCardYears">{{year}}</option>
+                                    <option *ngFor="let year of creditCardYears">
+                                        {{ year }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -226,17 +235,16 @@
 
                 </div>
 
-                <!-- order Details -->
+                <!-- Order details -->
                 <div class="form-area">
                     <h3>Review Your Order</h3>
 
-                    <p>Total Quantity: {{totalQuantity}}</p>
-                    <p>Shipping Free</p>
-                    <p>Total Price: {{totalPrice | currency:'USD'}}</p>
+                    <p>Total Quantity: {{ totalQuantity }}</p>
+                    <p>Shipping: FREE</p>
+                    <p>Total Price: {{ totalPrice | currency: 'USD' }}</p>
                 </div>
 
-                <!-- submit button -->
-
+                <!-- submit button-->
                 <div class="text-center">
                     <button type="submit" class="btn btn-info">Purchase</button>
                 </div>
